--- a/FormGetPost.html
+++ b/FormGetPost.html
@@ -122,7 +122,7 @@
 </head>
 
 <body>
-    <form method="get"  id="Form">
+    <form method="post"  id="Form">
         <h1>Registration</h1>
         <div class="ContainerInput">
             <input placeholder="Enter login" name="login" type="text">
