--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -3,15 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arrays</title>
+    <title>Cycle</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p id="Games"></p>
-    <button onclick="RandomNumber()">Створити випадкові числа</button>
-    <p id="ArrayNumber"></p>
-    <p id="MinNumber"></p>
-    <p id="MaxNumber"></p>
-    <p id="AverageValue"></p>
+    <button onclick="Start()">Start!!!</button>
     <script src="script.js"></script>
 </body>
 </html>
