Snake Game (Field)

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cycle</title>
+    <title>Snake Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button onclick="Start()">Start!!!</button>
+    <button id="StartButton" onclick="InitGame() ">Start</button>
+    <div class="Field"></div>
     <script src="script.js"></script>
 </body>
 </html>
