--- a/index.html
+++ b/index.html
@@ -10,5 +10,11 @@
     <button id="StartButton" onclick="InitGame() ">Start</button>
     <div class="Field"></div>
     <script src="script.js"></script>
+    <div id="Direction">
+        <button>&#8593</button>
+        <button>&#8595</button>
+        <button>&#8594</button>
+        <button>&#8592</button>
+    </div>
 </body>
 </html>
