--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="Timer"></div>
     <button id="StartButton" onclick="InitGame() ">Start</button>
     <div class="Field"></div>
     <script src="script.js"></script>
