--- a/index.html
+++ b/index.html
@@ -8,14 +8,8 @@
 </head>
 <body>
     <div id="Timer"></div>
-    <button id="StartButton" onclick="InitGame() ">Start</button>
-    <div class="Field"></div>
+    <button id="StartButton">Start</button>
+    <div id="Field"></div>
     <script src="script.js"></script>
-    <div id="Direction">
-        <button>&#8593</button>
-        <button>&#8595</button>
-        <button>&#8594</button>
-        <button>&#8592</button>
-    </div>
 </body>
 </html>
